# new-genserver

./: .gitignore  CHANGELOG.md  cabal.project  new-genserver.cabal
app/: Main.hs
src/: Example.hs  HP1.hs  HasPeer.hs  HasServer.hs  Method.hs  N.hs  N1.hs  N2.hs  S.hs  Serialise.hs  Sum.hs  Sum1.hs  T.hs  T1.hs  T2.hs  T3.hs  TS.hs  TS1.hs  TSE1.hs  TSHasServer.hs  Templates.hs  Templates1.hs  Type.hs
src/T/: HasServer.hs  IO.hs  IOSim.hs
