cabal-version:      2.4
name:               new-genserver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             EMQX-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Method
                   , Serialise
                   , Templates
                   , Sum
                   , Templates1
                   , Sum1
                   , Example
                   , HasServer
                   , HasPeer
                   , Type
                   , T
                   , TS
                   , TS1
                   , T1
                   , T2

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base >=4.14.1.0
                 , time
                 , fused-effects
                 , fused-effects-random
                 , cborg
                 , serialise
                 , io-classes
                 , io-sim
                 , strict-stm
                 , bytestring
                 , text
                 , time
                 , QuickCheck
                 , contra-tracer
                 , template-haskell
                 , containers
                 , random
                 , stm
    hs-source-dirs:   src
    default-language: Haskell2010
    -- ghc-options:        "-with-rtsopts=-T -I0 -A16m -N2 --disable-delayed-os-memory-return"

    -- ghc-options: -O3
    -- ghc-options: -W -fexpose-all-unfoldings -fspecialise-aggressively -O2

executable new-genserver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14.1.0,
        new-genserver

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
